# lol-chatlogger

./: .gitignore  README.md  fix_db.py  index.html  lol_tracker.py  package-lock.json  package.json  requirements.txt  tsconfig.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  commands.rs  db.rs  lib.rs  main.rs  scanner.rs  tracker.rs
src/lib/: ChatView.svelte  ScanPanel.svelte  SearchBar.svelte  Settings.svelte  TrackerPanel.svelte  UserList.svelte
