[package]
name = "lol-chat-logger"
version = "1.0.0"
edition = "2021"

[lib]
name = "lol_chat_logger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lol-chat-logger"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["process", "fs", "rt", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
screenshots = "0.8"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
which = "7"
tempfile = "3"
